--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-parallax-tilt": "^1.7.119",
     "typescript": "4.9.5",
     "waait": "^1.0.5"
   },
