--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.0.4",
+    "@radix-ui/react-tabs": "^1.0.3",
     "@tabler/icons-react": "^2.10.0",
     "@types/node": "18.15.3",
     "@types/react": "18.0.28",
