--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.0.4",
     "@radix-ui/react-tabs": "^1.0.3",
+    "@radix-ui/react-toggle-group": "^1.0.3",
     "@tabler/icons-react": "^2.10.0",
     "@types/node": "18.15.3",
     "@types/react": "18.0.28",
@@ -23,7 +24,8 @@
     "react-dom": "18.2.0",
     "react-parallax-tilt": "^1.7.119",
     "typescript": "4.9.5",
-    "waait": "^1.0.5"
+    "waait": "^1.0.5",
+    "zustand": "^4.3.7"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
